@@ -529,7 +529,6 @@ ldap_int_sasl_bind(
 	sasl_ssf_t		*ssf = NULL;
 	sasl_conn_t	*ctx;
 	sasl_interact_t *prompts = NULL;
-	const void *promptresult = NULL;
 	unsigned credlen;
 	struct berval ccred;
 	ber_socket_t		sd;
@@ -590,9 +589,6 @@ ldap_int_sasl_bind(
 			&credlen,
 			&mech );
 
-		/* Cyrus SASL library doesn't initialize the prompt result pointer */
-		if( promptresult == NULL && prompts != NULL ) prompts->result = NULL;
-
 		if( pmech == NULL && mech != NULL ) {
 			pmech = mech;
 
@@ -607,11 +603,6 @@ ldap_int_sasl_bind(
 			int res;
 			if( !interact ) break;
 			res = (interact)( ld, flags, defaults, prompts );
-
-			/* keep a pointer to the prompt result so we can free it
-			 * after Cyrus SASL has consumed the prompts.
-			 */
-			promptresult = prompts->result;
 
 			if( res != LDAP_SUCCESS ) break;
 		}
@@ -688,9 +679,6 @@ ldap_int_sasl_bind(
 				(SASL_CONST char **)&ccred.bv_val,
 				&credlen );
 
-			/* SASL library doesn't initialize the prompt result pointer */
-			if( promptresult == NULL && prompts != NULL ) prompts->result = NULL;
-
 #ifdef NEW_LOGGING
 				LDAP_LOG ( TRANSPORT, DETAIL1, 
 					"ldap_int_sasl_bind: sasl_client_step: %d\n", saslrc,0,0 );
@@ -703,12 +691,6 @@ ldap_int_sasl_bind(
 				int res;
 				if( !interact ) break;
 				res = (interact)( ld, flags, defaults, prompts );
-
-				/* keep a pointer to the prompt result so we can free it
-				 * after Cyrus SASL has consumed the prompts.
-				 */
-				promptresult = prompts->result;
-
 				if( res != LDAP_SUCCESS ) break;
 			}
 		} while ( saslrc == SASL_INTERACT );
@@ -768,8 +750,6 @@ ldap_int_sasl_bind(
 	}
 
 done:
-	/* free the last prompt result */
-	LDAP_FREE((void*)promptresult);
 	return rc;
 }
 
