@@ -8,7 +8,10 @@ OpenLDAP 2.1.18 Engineering
 	Fixed slapd ACL group DN crash (ITS#2467)
 	Fixed slapd substring normalization bug (ITS#2468)
 	Fixed back-bdb search filter empty value bug (ITS#2453)
-	Fixed ldappasswd -y support
+	Fixed SASL interactive free bug (ITS#2423)
+	Fixed liblber multi-value decode bug (ITS#2458)
+	Fixed liblber over read bug (ITS#2465)
+	Fixed ldappasswd -y support (ITS#2441)
 
 OpenLDAP 2.1.17 Release
 	Fixed libldap_r thread pool context bug (ITS#2404)
